cmake_minimum_required(VERSION 3.10)
project(chap4)

set(CMAKE_CXX_STANDARD 11)

set(SOURCE_FILES app/Pr5-1.cpp app/Pr5-2.cpp app/Pr5-3.cpp app/Pr5-4.cpp
        app/Pr5-5.cpp app/Pr5-6.cpp app/sqrt.cpp app/Pr5-7.cpp app/Pr5-8 app/Pr5-9-revised.cpp
        app/ruler.cpp app/Pr5-10.cpp app/Pr5-11.cpp app/Pr5-12.cpp app/Pr5-13 app/Pr5-14.cpp
        app/Pr5-15.cpp app/gambler.cpp app/Pr5-16.cpp app/Pr5-17.cpp app/Pr5-18 app/Pr5-19.cpp
        app/Pr5-20.cpp app/Pr5-21.cpp app/Pr5-22.cpp app/Pr5-23 app/Pr5-24.cpp
        app/Pr5-25.cpp app/Pr5-26.cpp)

add_executable(Pr5-1.exe app/Pr5-1.cpp app/sqrt.cpp app/ruler.cpp)
add_executable(Pr5-2.exe app/Pr5-2.cpp)
add_executable(Pr5-3.exe app/Pr5-3.cpp)
add_executable(Pr5-4.exe app/Pr5-4.cpp)
add_executable(Pr5-5.exe app/Pr5-5.cpp)
add_executable(Pr5-6.exe app/Pr5-6.cpp)
add_executable(sqrt.exe app/sqrt.cpp)
add_executable(Pr5-7.exe app/Pr5-7.cpp)
add_executable(Pr5-8.exe app/Pr5-8.cpp)
add_executable(Pr5-9.exe app/Pr5-9-revised.cpp)
add_executable(ruler.exe app/ruler.cpp app/ruler.cpp)
add_executable(Pr5-10.exe app/Pr5-10.cpp)
add_executable(Pr5-11.exe app/Pr5-11.cpp)
add_executable(Pr5-12.exe app/Pr5-12.cpp)
add_executable(Pr5-13.exe app/Pr5-13.cpp)
add_executable(Pr5-14.exe app/Pr5-14.cpp)
add_executable(Pr5-15.exe app/Pr5-15.cpp)
add_executable(gambler.exe app/gambler.cpp app/gambler.cpp)
add_executable(Pr5-16.exe app/Pr5-16.cpp)
add_executable(Pr5-17.exe app/Pr5-17.cpp)
add_executable(Pr5-18.exe app/Pr5-18.cpp)
add_executable(Pr5-19.exe app/Pr5-19.cpp)
add_executable(Pr5-20.exe app/Pr5-20.cpp)
add_executable(Pr5-21.exe app/Pr5-21.cpp)
add_executable(Pr5-22.exe app/Pr5-22.cpp)
add_executable(Pr5-23.exe app/Pr5-23.cpp)
add_executable(Pr5-24.exe app/Pr5-24.cpp)
add_executable(Pr5-25.exe app/Pr5-25.cpp)
add_executable(Pr5-26.exe app/Pr5-26.cpp)
